--- a/src/Services/Basket/Basket.API/appsettings.json
+++ b/src/Services/Basket/Basket.API/appsettings.json
@@ -4,7 +4,10 @@
   },
   "GrpcSettings": {
     "DiscountUrl": "http://localhost:5004"
-  }, 
+  },
+  "EventBusSettings": {
+    "HostAddress": "amqp://guest:guest@localhost:5672"
+  },
 
   "Logging": {
     "LogLevel": {
