--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -134,3 +134,17 @@ services:
     ports:
       - "8010:80"
 
+  shopping.aggreagator:
+    container_name: shopping.aggreagator
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "ApiSettings:CatalogUrl=http://catalog.api"
+      - "ApiSettings:BasketUrl=http://basket.api"
+      - "ApiSettings:OrderingUrl=http://ordering.api"
+    depends_on:
+      - catalog.api
+      - basket.api
+      - ordering.api
+    ports:
+      - "8005:80"
+
